monitoring/prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: stiil-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.tpi.${homedomain:=undefined}
    http:
      paths:
      - backend:
          service:
            name: prometheus-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - secretName: prometheus-cert
    hosts:
    - prometheus.tpi.${homedomain:=undefined}
